force-app/main/default/objects/Item__c/fields/Breakfast__c.field-meta.xml
<CustomField>
    <fullName>Breakfast__c</fullName>
    <label>Breakfast</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dosa</fullName>
            </value>
            <value>
                <fullName>Idly</fullName>
            </value>
            <value>
                <fullName>Vada</fullName>
            </value>
            <value>
                <fullName>Upma</fullName>
            </value>
            <value>
                <fullName>Sprouts</fullName>
            </value>
            <value>
                <fullName>Puri</fullName>
            </value>
            <value>
                <fullName>Chapathi</fullName>
            </value>
            <value>
                <fullName>Poha</fullName>
            </value>
            <value>
                <fullName>Vegetable sandwitch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>