force-app/main/default/objects/Item__c/fields/Desserts__c.field-meta.xml
<CustomField>
    <fullName>Desserts__c</fullName>
    <label>Desserts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coffee pudding</fullName>
            </value>
            <value>
                <fullName>Red velvet</fullName>
            </value>
            <value>
                <fullName>Brownies</fullName>
            </value>
            <value>
                <fullName>Cheese cake</fullName>
            </value>
            <value>
                <fullName>Swiss roll</fullName>
            </value>
            <value>
                <fullName>Chocolate mousse</fullName>
            </value>
            <value>
                <fullName>Bread butter pudding</fullName>
            </value>
            <value>
                <fullName>Carrot cake</fullName>
            </value>
            <value>
                <fullName>Angel cake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>