force-app/main/default/objects/Item__c/fields/Milk_shakes__c.field-meta.xml
<CustomField>
    <fullName>Milk_shakes__c</fullName>
    <label>Milk shakes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vanilla</fullName>
            </value>
            <value>
                <fullName>Butter scotch</fullName>
            </value>
            <value>
                <fullName>Strawberry</fullName>
            </value>
            <value>
                <fullName>Mango</fullName>
            </value>
            <value>
                <fullName>Oreo milkshake</fullName>
            </value>
            <value>
                <fullName>Banana milkshake</fullName>
            </value>
            <value>
                <fullName>Blueberry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>