force-app/main/default/objects/Item__c/fields/Nonveg__c.field-meta.xml
<CustomField>
    <fullName>Nonveg__c</fullName>
    <label>Nonveg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chicken BIryani</fullName>
            </value>
            <value>
                <fullName>Chicken Dum biryani</fullName>
            </value>
            <value>
                <fullName>Hyderabad special biryani</fullName>
            </value>
            <value>
                <fullName>Mutton Biryani</fullName>
            </value>
            <value>
                <fullName>Prawns Biryani</fullName>
            </value>
            <value>
                <fullName>Mutton fry</fullName>
            </value>
            <value>
                <fullName>Mutton Curry</fullName>
            </value>
            <value>
                <fullName>Fish fry</fullName>
            </value>
            <value>
                <fullName>Fish curry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>