force-app/main/default/objects/Item__c/fields/Starters__c.field-meta.xml
<CustomField>
    <fullName>Starters__c</fullName>
    <label>Starters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finger Chips</fullName>
            </value>
            <value>
                <fullName>Veg Crispy</fullName>
            </value>
            <value>
                <fullName>Gobi Manchirian</fullName>
            </value>
            <value>
                <fullName>Paneer Chilly</fullName>
            </value>
            <value>
                <fullName>Paneer 65</fullName>
            </value>
            <value>
                <fullName>Chicken Tandoori</fullName>
            </value>
            <value>
                <fullName>Chicken Chilly</fullName>
            </value>
            <value>
                <fullName>Chicken 65</fullName>
            </value>
            <value>
                <fullName>Chicken Lollypop</fullName>
            </value>
            <value>
                <fullName>Chicken Tikkaa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>