force-app/main/default/objects/Item__c/fields/Veg__c.field-meta.xml
<CustomField>
    <fullName>Veg__c</fullName>
    <label>Veg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veg fried rice</fullName>
            </value>
            <value>
                <fullName>Mushroom fried rice</fullName>
            </value>
            <value>
                <fullName>Veg biryani</fullName>
            </value>
            <value>
                <fullName>Kaju masala</fullName>
            </value>
            <value>
                <fullName>palak paneer</fullName>
            </value>
            <value>
                <fullName>paneer bhurjee</fullName>
            </value>
            <value>
                <fullName>vegetable pulao</fullName>
            </value>
            <value>
                <fullName>jeera rice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>